make-a-wish-salesforce/src/objects/Medical_Questions__c.object
<CustomObject>
    <description>It holds the medical questions for the diagnosis entered by the submitter.</description>
    <fields>
        <fullName>Condition_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the Diagnosis name for medical questions</description>
        <label>Condition Description</label>
        <referenceTo>Condition_Description__c</referenceTo>
        <relationshipLabel>Medical Questions</relationshipLabel>
        <relationshipName>Medical_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Condition__c</fullName>
        <description>It contains wish child diagnosis current condition</description>
        <label>Current Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comment Box</fullName>
                </value>
                <value>
                    <fullName>Picklist - Single</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Epilepsy_picklist__c</fullName>
        <description>It holds the value of Epilepsy picklit values</description>
        <label>Epilepsy picklist</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Action__c</fullName>
        <description>Captures the action the system should take upon receiving a response to this question.</description>
        <inlineHelpText>Next Action is only used in conjunction with Data Type "Comment Box"</inlineHelpText>
        <label>Next Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Data_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Next Question in Sort Order</fullName>
                </value>
                <value>
                    <fullName>Specified Question</fullName>
                </value>
                <value>
                    <fullName>Stop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_values__c</fullName>
        <label>Picklist values</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question for diagnosis</description>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_to_Chapter__c</fullName>
        <description>It holds the recommendation for kids based on travel list they selected</description>
        <label>Recommendation to Chapter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>It contains the sort order for medical questions</description>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specified_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the next question if the Next Action is denoted as Next Specified Question.</description>
        <label>Specified Question</label>
        <referenceTo>Medical_Questions__c</referenceTo>
        <relationshipLabel>Medical Questions</relationshipLabel>
        <relationshipName>Medical_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Travel_Question_Group__c</fullName>
        <description>Determines the medical category that a Travel Algorithm record will display in on the DV form.</description>
        <inlineHelpText>Determines the medical category that a Travel Algorithm record will display in on the DV form.</inlineHelpText>
        <label>Travel Question Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Respiratory System</fullName>
                </value>
                <value>
                    <fullName>Circulatory System and Heart</fullName>
                </value>
                <value>
                    <fullName>Gastrointestinal System/Liver</fullName>
                </value>
                <value>
                    <fullName>Nervous System</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wrapper_Variable__c</fullName>
        <description>It will hold the wrapper class variable name.</description>
        <label>Wrapper Variable</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Medical Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Sort_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Condition_Description__c</columns>
        <columns>Current_Condition__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Data_Type__c</columns>
        <columns>Epilepsy_picklist__c</columns>
        <columns>Picklist_values__c</columns>
        <columns>Question__c</columns>
        <columns>Recommendation_to_Chapter__c</columns>
        <columns>Wrapper_Variable__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMQ-{0000}</displayFormat>
        <label>Medical Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Questions</pluralLabel>
    <recordTypes>
        <fullName>Medical_Questions</fullName>
        <active>true</active>
        <description>It contains medical questions</description>
        <label>Medical Questions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Travel_Algorithm</fullName>
        <active>true</active>
        <description>It contains the list of current conditions for travel algorithm</description>
        <label>Travel Algorithm</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Do_not_set_picklist_question_Responses</fullName>
        <active>true</active>
        <description>For Picklist questions, please specify the next action on each response option, not on the Medical Question.  Next Action on the Medical Question is for Comment question types only.</description>
        <errorConditionFormula>(!ISBLANK(TEXT(Next_Action__c)) ||  !ISBLANK(Specified_Question__c)) &amp;&amp;  ISPICKVAL(Data_Type__c, "Picklist - Single")</errorConditionFormula>
        <errorMessage>For Picklist questions, please specify the next action on each response record, not on the Medical Question record directly.  Next Action + Specified Questions on the Medical Question record are for Comment question types only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Action_is_Question_select_Question</fullName>
        <active>true</active>
        <description>If the Next Action is a Specified Question, please select a Medical Question.</description>
        <errorConditionFormula>ISPICKVAL(Next_Action__c, "Specified Question") &amp;&amp;  ISBLANK(Specified_Question__c)</errorConditionFormula>
        <errorDisplayField>Specified_Question__c</errorDisplayField>
        <errorMessage>If the Next Action is a Specified Question, please select a Medical Question.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Action_not_a_question_no_question</fullName>
        <active>true</active>
        <description>If the Next Action is not a specified question, please leave the specified question field blank.</description>
        <errorConditionFormula>!ISPICKVAL( Next_Action__c , "Specified Question") &amp;&amp; !ISBLANK( Specified_Question__c)</errorConditionFormula>
        <errorDisplayField>Specified_Question__c</errorDisplayField>
        <errorMessage>If the Next Action is not a specified question, please leave the specified question field blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sort_Order_for_Medical_Questions</fullName>
        <active>true</active>
        <description>Questions of the record type "Medical Questions" must has a sort order.</description>
        <errorConditionFormula>(ISBLANK(Sort_Order__c)
||
Sort_Order__c=0)
&amp;&amp;
RecordType.DeveloperName = "Medical_Questions"</errorConditionFormula>
        <errorDisplayField>Sort_Order__c</errorDisplayField>
        <errorMessage>All medical questions must have a sort order of 1 or more.</errorMessage>
    </validationRules>
</CustomObject>